--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5"
+  },
+  "dependencies": {
+    "@tweenjs/tween.js": "^18.6.4"
   }
 }
