--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "dev": "parcel server src/index.html --port 3005",
     "build": "parcel build src/index.html"
   },
-  "devDependencies": {
-    "parcel-bundler": "^1.12.5"
-  },
   "dependencies": {
     "@tweenjs/tween.js": "^18.6.4"
+  },
+  "devDependencies": {
+    "babel-polyfill": "^6.26.0",
+    "parcel-bundler": "^1.12.5"
   }
 }
