--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "parcel build src/index.html"
   },
   "dependencies": {
-    "@tweenjs/tween.js": "^18.6.4"
+    "@tweenjs/tween.js": "^18.6.4",
+    "stats.js": "^0.17.0"
   },
   "devDependencies": {
     "babel-polyfill": "^6.26.0",
